--- a/.github/workflows/task.yml
+++ b/.github/workflows/task.yml
@@ -23,6 +23,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - name: Run
+      - name: Run_1
         run: |
           python ./main.py ${{ secrets.USER }} ${{ secrets.PASS }}
+      - name: Run_2
+        run: |
+          python ./main.py ${{ secrets.USER2 }} ${{ secrets.PASS2 }}
